Projet_GL/src/test/deca/context/valid/unprovided/unaryOpArith.deca
// Description:
//	Test d'opération unaire arithmétique (Minus)
//
// Resultats:
//    Aucune erreur attendue
//
// Historique:
//    cree le 24/01/2018

{
	int a;
	int b = -a;
}
