Projet_GL/src/test/deca/context/invalid/unprovided/readFloatAsInt.deca
// Description:
//    Appel d'un readFloat sur un int
//
// Resultat: Ligne 11
//    COntextualError : Impossible intialization
//
// Historique:
//    Créé le 24/01/2018

{
     int a = readFloat();
}
	